force-app/main/default/objects/Lead/fields/KindergartenCode__c.field-meta.xml
<CustomField>
    <fullName>KindergartenCode__c</fullName>
    <description>어린이집코드</description>
    <externalId>true</externalId>
    <label>Kindergarten Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>