force-app/main/default/objects/Lead/fields/KindergartenType__c.field-meta.xml
<CustomField>
    <fullName>KindergartenType__c</fullName>
    <description>어린이집유형</description>
    <label>Kindergarten Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>