force-app/main/default/objects/Lead/fields/lastModTs__c.field-meta.xml
<CustomField>
    <fullName>lastModTs__c</fullName>
    <label>lastModTs</label>
    <type>DateTime</type>
</CustomField>