force-app/main/default/objects/Lead/fields/linkInsttNm__c.field-meta.xml
<CustomField>
    <fullName>linkInsttNm__c</fullName>
    <label>linkInsttNm</label>
    <length>200</length>
    <type>Text</type>
</CustomField>