force-app/main/default/objects/Lead/fields/lmtGrpNo__c.field-meta.xml
<CustomField>
    <fullName>lmtGrpNo__c</fullName>
    <label>lmtGrpNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>