force-app/main/default/objects/Lead/fields/lmtSno__c.field-meta.xml
<CustomField>
    <fullName>lmtSno__c</fullName>
    <label>lmtSno</label>
    <length>255</length>
    <type>Text</type>
</CustomField>