force-app/main/default/objects/Lead/fields/LocationState__c.field-meta.xml
<CustomField>
    <fullName>LocationState__c</fullName>
    <label>LocationState</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LocationStateProvince__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>41220</fullName>
                <label>경기 평택시</label>
            </value>
            <value>
                <fullName>41250</fullName>
                <label>경기 동두천시</label>
            </value>
            <value>
                <fullName>41270</fullName>
                <label>경기 안산시</label>
            </value>
            <value>
                <fullName>41280</fullName>
                <label>경기 고양시</label>
            </value>
            <value>
                <fullName>41290</fullName>
                <label>경기 과천시</label>
            </value>
            <value>
                <fullName>41310</fullName>
                <label>경기 구리시</label>
            </value>
            <value>
                <fullName>41360</fullName>
                <label>경기 남양주시</label>
            </value>
            <value>
                <fullName>41370</fullName>
                <label>경기 오산시</label>
            </value>
            <value>
                <fullName>41390</fullName>
                <label>경기 시흥시</label>
            </value>
            <value>
                <fullName>41410</fullName>
                <label>경기 군포시</label>
            </value>
            <value>
                <fullName>41430</fullName>
                <label>경기 의왕시</label>
            </value>
            <value>
                <fullName>41450</fullName>
                <label>경기 하남시</label>
            </value>
            <value>
                <fullName>41460</fullName>
                <label>경기 용인시</label>
            </value>
            <value>
                <fullName>41480</fullName>
                <label>경기 파주시</label>
            </value>
            <value>
                <fullName>41500</fullName>
                <label>경기 이천시</label>
            </value>
            <value>
                <fullName>46810</fullName>
                <label>전남 강진군</label>
            </value>
            <value>
                <fullName>46820</fullName>
                <label>전남 해남군</label>
            </value>
            <value>
                <fullName>46830</fullName>
                <label>전남 영암군</label>
            </value>
            <value>
                <fullName>46840</fullName>
                <label>전남 무안군</label>
            </value>
            <value>
                <fullName>46860</fullName>
                <label>전남 함평군</label>
            </value>
            <value>
                <fullName>46870</fullName>
                <label>전남 영광군</label>
            </value>
            <value>
                <fullName>46880</fullName>
                <label>전남 장성군</label>
            </value>
            <value>
                <fullName>46890</fullName>
                <label>전남 완도군</label>
            </value>
            <value>
                <fullName>46900</fullName>
                <label>전남 진도군</label>
            </value>
            <value>
                <fullName>46910</fullName>
                <label>전남 신안군</label>
            </value>
            <value>
                <fullName>45110</fullName>
                <label>전북 전주시</label>
            </value>
            <value>
                <fullName>45130</fullName>
                <label>전북 군산시</label>
            </value>
            <value>
                <fullName>45140</fullName>
                <label>전북 익산시</label>
            </value>
            <value>
                <fullName>45180</fullName>
                <label>전북 정읍시</label>
            </value>
            <value>
                <fullName>45190</fullName>
                <label>전북 남원시</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>