force-app/main/default/objects/Lead/fields/LocationStateProvince__c.field-meta.xml
<CustomField>
    <fullName>LocationStateProvince__c</fullName>
    <label>LocationStateProvince</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>11</fullName>
                <label>서울</label>
            </value>
            <value>
                <fullName>28</fullName>
                <label>인천</label>
            </value>
            <value>
                <fullName>41</fullName>
                <label>경기</label>
            </value>
            <value>
                <fullName>42</fullName>
                <label>강원</label>
            </value>
            <value>
                <fullName>26</fullName>
                <label>부산</label>
            </value>
            <value>
                <fullName>27</fullName>
                <label>대구</label>
            </value>
            <value>
                <fullName>31</fullName>
                <label>울산</label>
            </value>
            <value>
                <fullName>47</fullName>
                <label>경북</label>
            </value>
            <value>
                <fullName>48</fullName>
                <label>경남</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>대전</label>
            </value>
            <value>
                <fullName>44</fullName>
                <label>충남</label>
            </value>
            <value>
                <fullName>36</fullName>
                <label>세종</label>
            </value>
            <value>
                <fullName>43</fullName>
                <label>충북</label>
            </value>
            <value>
                <fullName>29</fullName>
                <label>광주</label>
            </value>
            <value>
                <fullName>46</fullName>
                <label>전남</label>
            </value>
            <value>
                <fullName>45</fullName>
                <label>전북</label>
            </value>
            <value>
                <fullName>50</fullName>
                <label>제주</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>