force-app/main/default/objects/Lead/fields/lvSeNm__c.field-meta.xml
<CustomField>
    <fullName>lvSeNm__c</fullName>
    <label>lvSeNm</label>
    <length>200</length>
    <type>Text</type>
</CustomField>