force-app/main/default/objects/Lead/fields/manEipCnt__c.field-meta.xml
<CustomField>
    <fullName>manEipCnt__c</fullName>
    <label>manEipCnt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>