force-app/main/default/objects/Lead/fields/MarketShare__c.field-meta.xml
<CustomField>
    <fullName>MarketShare__c</fullName>
    <label>MarketShare</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>