force-app/main/default/objects/Lead/fields/mgtNo__c.field-meta.xml
<CustomField>
    <fullName>mgtNo__c</fullName>
    <externalId>true</externalId>
    <label>mgtNo</label>
    <length>40</length>
    <type>Text</type>
</CustomField>