force-app/main/default/objects/Lead/fields/mnfctYn__c.field-meta.xml
<CustomField>
    <fullName>mnfctYn__c</fullName>
    <label>mnfctYn</label>
    <length>1</length>
    <type>Text</type>
</CustomField>