force-app/main/default/objects/Lead/fields/monAm__c.field-meta.xml
<CustomField>
    <fullName>monAm__c</fullName>
    <label>monAm</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>