force-app/main/default/objects/Lead/fields/MonthlySales__c.field-meta.xml
<CustomField>
    <fullName>MonthlySales__c</fullName>
    <description>월매출</description>
    <label>Monthly Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>