force-app/main/default/objects/Lead/fields/NaraBidYN__c.field-meta.xml
<CustomField>
    <fullName>NaraBidYN__c</fullName>
    <defaultValue>false</defaultValue>
    <description>나라장터공고여부</description>
    <label>Nara Bid Y/N</label>
    <type>Checkbox</type>
</CustomField>