force-app/main/default/objects/Lead/fields/newLeadCheck__c.field-meta.xml
<CustomField>
    <fullName>newLeadCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <description>식자재상담신청에서 입력받은 사업자번호가 Account에 동일한 데이터가 있을시 체크(기존고객으로 관리)</description>
    <label>신규리드체크</label>
    <type>Checkbox</type>
</CustomField>