force-app/main/default/objects/Lead/fields/ntceInsttCd__c.field-meta.xml
<CustomField>
    <fullName>ntceInsttCd__c</fullName>
    <label>ntceInsttCd</label>
    <length>7</length>
    <type>Text</type>
</CustomField>