force-app/main/default/objects/Lead/fields/ntceInsttNm__c.field-meta.xml
<CustomField>
    <fullName>ntceInsttNm__c</fullName>
    <label>ntceInsttNm</label>
    <length>200</length>
    <type>Text</type>
</CustomField>