force-app/main/default/objects/Lead/fields/ntceSpecDocUrl10__c.field-meta.xml
<CustomField>
    <fullName>ntceSpecDocUrl10__c</fullName>
    <label>ntceSpecDocUrl10</label>
    <type>TextArea</type>
</CustomField>