force-app/main/default/objects/Lead/fields/ntceSpecDocUrl1__c.field-meta.xml
<CustomField>
    <fullName>ntceSpecDocUrl1__c</fullName>
    <label>ntceSpecDocUrl1</label>
    <type>TextArea</type>
</CustomField>