force-app/main/default/objects/Lead/fields/ntceSpecDocUrl2__c.field-meta.xml
<CustomField>
    <fullName>ntceSpecDocUrl2__c</fullName>
    <label>ntceSpecDocUrl2</label>
    <type>TextArea</type>
</CustomField>