force-app/main/default/objects/Lead/fields/ntceSpecFileNm10__c.field-meta.xml
<CustomField>
    <fullName>ntceSpecFileNm10__c</fullName>
    <label>ntceSpecFileNm10</label>
    <type>TextArea</type>
</CustomField>