force-app/main/default/objects/Lead/fields/ntceSpecFileNm1__c.field-meta.xml
<CustomField>
    <fullName>ntceSpecFileNm1__c</fullName>
    <label>ntceSpecFileNm1</label>
    <type>TextArea</type>
</CustomField>