force-app/main/default/objects/Lead/fields/ntceSpecFileNm2__c.field-meta.xml
<CustomField>
    <fullName>ntceSpecFileNm2__c</fullName>
    <label>ntceSpecFileNm2</label>
    <type>TextArea</type>
</CustomField>