force-app/main/default/objects/Lead/fields/NumberofChildren__c.field-meta.xml
<CustomField>
    <fullName>NumberofChildren__c</fullName>
    <description>현원</description>
    <label>Number of Children</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>