force-app/main/default/objects/Lead/fields/OnlineBidYN__c.field-meta.xml
<CustomField>
    <fullName>OnlineBidYN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Online Bid Y/N</label>
    <type>Checkbox</type>
</CustomField>