force-app/main/default/objects/Lead/fields/opnSvcId__c.field-meta.xml
<CustomField>
    <fullName>opnSvcId__c</fullName>
    <label>opnSvcId</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>07_21_01_P</fullName>
                <label>위탁급식영업</label>
            </value>
            <value>
                <fullName>07_21_02_P</fullName>
                <label>집단급식소</label>
            </value>
            <value>
                <fullName>07_22_01_P</fullName>
                <label>집단급식소식품판매업</label>
            </value>
            <value>
                <fullName>07_22_08_P</fullName>
                <label>식품소분업</label>
            </value>
            <value>
                <fullName>07_22_11_P</fullName>
                <label>식품제조가공업</label>
            </value>
            <value>
                <fullName>07_22_12_P</fullName>
                <label>식품첨가물제조업</label>
            </value>
            <value>
                <fullName>07_22_13_P</fullName>
                <label>식품판매업(기타)</label>
            </value>
            <value>
                <fullName>07_22_17_P</fullName>
                <label>유통전문판매업</label>
            </value>
            <value>
                <fullName>07_22_19_P</fullName>
                <label>즉석판매제조가공업</label>
            </value>
            <value>
                <fullName>07_24_01_P</fullName>
                <label>관광식당</label>
            </value>
            <value>
                <fullName>07_24_02_P</fullName>
                <label>관광유흥음식점업</label>
            </value>
            <value>
                <fullName>07_24_03_P</fullName>
                <label>외국인전용유흥음식점업</label>
            </value>
            <value>
                <fullName>07_24_04_P</fullName>
                <label>일반음식점</label>
            </value>
            <value>
                <fullName>07_24_05_P</fullName>
                <label>휴게음식점</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>