force-app/main/default/objects/Lead/fields/orderPlanUntyNo__c.field-meta.xml
<CustomField>
    <fullName>orderPlanUntyNo__c</fullName>
    <label>orderPlanUntyNo</label>
    <length>35</length>
    <type>Text</type>
</CustomField>