force-app/main/default/objects/Lead/fields/pblancDate__c.field-meta.xml
<CustomField>
    <fullName>pblancDate__c</fullName>
    <label>pblancDate</label>
    <type>Date</type>
</CustomField>