force-app/main/default/objects/Lead/fields/prdctQty__c.field-meta.xml
<CustomField>
    <fullName>prdctQty__c</fullName>
    <label>prdctQty</label>
    <length>25</length>
    <type>Text</type>
</CustomField>