force-app/main/default/objects/Lead/fields/prdctSpecNm__c.field-meta.xml
<CustomField>
    <fullName>prdctSpecNm__c</fullName>
    <label>prdctSpecNm</label>
    <length>200</length>
    <type>Text</type>
</CustomField>