force-app/main/default/objects/Lead/fields/prdctUnit__c.field-meta.xml
<CustomField>
    <fullName>prdctUnit__c</fullName>
    <label>prdctUnit</label>
    <length>30</length>
    <type>Text</type>
</CustomField>