force-app/main/default/objects/Lead/fields/prdctUprc__c.field-meta.xml
<CustomField>
    <fullName>prdctUprc__c</fullName>
    <label>prdctUprc</label>
    <length>25</length>
    <type>Text</type>
</CustomField>