force-app/main/default/objects/Lead/fields/PreArrangePriceDecisionMethod__c.field-meta.xml
<CustomField>
    <fullName>PreArrangePriceDecisionMethod__c</fullName>
    <description>나라장터 입찰 예정 가격 결정 방법</description>
    <label>Pre Arrange Price Decision Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>