force-app/main/default/objects/Lead/fields/presmptPrce__c.field-meta.xml
<CustomField>
    <fullName>presmptPrce__c</fullName>
    <label>presmptPrce</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>