force-app/main/default/objects/Lead/fields/prtcptPsblRgnNm__c.field-meta.xml
<CustomField>
    <fullName>prtcptPsblRgnNm__c</fullName>
    <description>참가가능지역명</description>
    <label>Participation Area Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>