force-app/main/default/objects/Lead/fields/purchsObjPrdctList__c.field-meta.xml
<CustomField>
    <fullName>purchsObjPrdctList__c</fullName>
    <label>purchsObjPrdctList</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>