force-app/main/default/objects/Lead/fields/rbidOpengDt__c.field-meta.xml
<CustomField>
    <fullName>rbidOpengDt__c</fullName>
    <label>rbidOpengDt</label>
    <length>19</length>
    <type>Text</type>
</CustomField>