force-app/main/default/objects/Lead/fields/refNo__c.field-meta.xml
<CustomField>
    <fullName>refNo__c</fullName>
    <label>refNo</label>
    <length>105</length>
    <type>Text</type>
</CustomField>