force-app/main/default/objects/Lead/fields/reNtceYn__c.field-meta.xml
<CustomField>
    <fullName>reNtceYn__c</fullName>
    <label>reNtceYn</label>
    <length>1</length>
    <type>Text</type>
</CustomField>