force-app/main/default/objects/Lead/fields/RepresentativeBirthDate__c.field-meta.xml
<CustomField>
    <fullName>RepresentativeBirthDate__c</fullName>
    <label>Representative Birth Date</label>
    <length>40</length>
    <type>Text</type>
</CustomField>