force-app/main/default/objects/Lead/fields/RepresentativeName__c.field-meta.xml
<CustomField>
    <fullName>RepresentativeName__c</fullName>
    <label>Representative Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>