force-app/main/default/objects/Lead/fields/rgstDt__c.field-meta.xml
<CustomField>
    <fullName>rgstDt__c</fullName>
    <label>rgstDt</label>
    <type>DateTime</type>
</CustomField>