force-app/main/default/objects/Lead/fields/rgstTyNm__c.field-meta.xml
<CustomField>
    <fullName>rgstTyNm__c</fullName>
    <label>rgstTyNm</label>
    <length>100</length>
    <type>Text</type>
</CustomField>