force-app/main/default/objects/Lead/fields/ropnYmd__c.field-meta.xml
<CustomField>
    <fullName>ropnYmd__c</fullName>
    <label>ropnYmd</label>
    <type>Date</type>
</CustomField>