force-app/main/default/objects/Lead/fields/rsrvtnPrceReMkngMthdNm__c.field-meta.xml
<CustomField>
    <fullName>rsrvtnPrceReMkngMthdNm__c</fullName>
    <label>rsrvtnPrceReMkngMthdNm</label>
    <length>50</length>
    <type>Text</type>
</CustomField>