force-app/main/default/objects/Lead/fields/SalesGroup__c.field-meta.xml
<CustomField>
    <fullName>SalesGroup__c</fullName>
    <formula>Owner:User.UserRole.Name</formula>
    <label>Sales Group</label>
    <type>Text</type>
</CustomField>