force-app/main/default/objects/Lead/fields/siteArea__c.field-meta.xml
<CustomField>
    <fullName>siteArea__c</fullName>
    <label>siteArea</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>