force-app/main/default/objects/Lead/fields/sitePostNo__c.field-meta.xml
<CustomField>
    <fullName>sitePostNo__c</fullName>
    <label>sitePostNo</label>
    <length>7</length>
    <type>Text</type>
</CustomField>