force-app/main/default/objects/Lead/fields/siteWhlAddr__c.field-meta.xml
<CustomField>
    <fullName>siteWhlAddr__c</fullName>
    <label>siteWhlAddr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>