force-app/main/default/objects/Lead/fields/SizePersons__c.field-meta.xml
<CustomField>
    <fullName>SizePersons__c</fullName>
    <description>규모(명)</description>
    <label>Size (Persons)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>