force-app/main/default/objects/Lead/fields/stdNtceDocUrl__c.field-meta.xml
<CustomField>
    <fullName>stdNtceDocUrl__c</fullName>
    <label>stdNtceDocUrl</label>
    <type>TextArea</type>
</CustomField>