force-app/main/default/objects/Lead/fields/SubNumber__c.field-meta.xml
<CustomField>
    <fullName>SubNumber__c</fullName>
    <description>나라장터의 입찰공고 차수 데이터</description>
    <label>Sub Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>