force-app/main/default/objects/Lead/fields/sucsfbidLwltRate__c.field-meta.xml
<CustomField>
    <fullName>sucsfbidLwltRate__c</fullName>
    <label>sucsfbidLwltRate</label>
    <length>22</length>
    <type>Text</type>
</CustomField>