force-app/main/default/objects/Lead/fields/sucsfbidMthdCd__c.field-meta.xml
<CustomField>
    <fullName>sucsfbidMthdCd__c</fullName>
    <label>sucsfbidMthdCd</label>
    <length>10</length>
    <type>Text</type>
</CustomField>