force-app/main/default/objects/Lead/fields/sucsfbidMthdNm__c.field-meta.xml
<CustomField>
    <fullName>sucsfbidMthdNm__c</fullName>
    <label>sucsfbidMthdNm</label>
    <length>200</length>
    <type>Text</type>
</CustomField>