force-app/main/default/objects/Lead/fields/TemporarilyCloseEndDate__c.field-meta.xml
<CustomField>
    <fullName>TemporarilyCloseEndDate__c</fullName>
    <description>휴지종료일자</description>
    <label>Temporarily Close End Date</label>
    <type>Date</type>
</CustomField>