force-app/main/default/objects/Lead/fields/TemporarilyCloseStartDate__c.field-meta.xml
<CustomField>
    <fullName>TemporarilyCloseStartDate__c</fullName>
    <description>휴지시작일자</description>
    <label>Temporarily Close Start Date</label>
    <type>Date</type>
</CustomField>