force-app/main/default/objects/Lead/fields/totEpNum__c.field-meta.xml
<CustomField>
    <fullName>totEpNum__c</fullName>
    <label>totEpNum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>