force-app/main/default/objects/Lead/fields/totPrdprcNum__c.field-meta.xml
<CustomField>
    <fullName>totPrdprcNum__c</fullName>
    <label>totPrdprcNum</label>
    <length>20</length>
    <type>Text</type>
</CustomField>