force-app/main/default/objects/Lead/fields/TypeOfOperation__c.field-meta.xml
<CustomField>
    <fullName>TypeOfOperation__c</fullName>
    <label>Type of Operation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TypeOfOperation</valueSetName>
    </valueSet>
</CustomField>