force-app/main/default/objects/Lead/fields/untyNtceNo__c.field-meta.xml
<CustomField>
    <fullName>untyNtceNo__c</fullName>
    <label>untyNtceNo</label>
    <length>11</length>
    <type>Text</type>
</CustomField>