force-app/main/default/objects/Lead/fields/updateGbn__c.field-meta.xml
<CustomField>
    <fullName>updateGbn__c</fullName>
    <label>updateGbn</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>U</fullName>
                <label>Update</label>
            </value>
            <value>
                <fullName>I</fullName>
                <label>Insert</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>Delete</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>