force-app/main/default/objects/Lead/fields/wtrSplyFacilSeNm__c.field-meta.xml
<CustomField>
    <fullName>wtrSplyFacilSeNm__c</fullName>
    <label>wtrSplyFacilSeNm</label>
    <length>200</length>
    <type>Text</type>
</CustomField>