force-app/main/default/objects/Lead/fields/y__c.field-meta.xml
<CustomField>
    <fullName>y__c</fullName>
    <label>y</label>
    <length>20</length>
    <type>Text</type>
</CustomField>