force-app/main/default/objects/Lead/recordTypes/catering_business.recordType-meta.xml
<RecordType>
    <fullName>catering_business</fullName>
    <active>true</active>
    <businessProcess>Standard Lead Process</businessProcess>
    <label>catering business</label>
</RecordType>