force-app/main/default/objects/Lead/recordTypes/DeliveryDepartment.recordType-meta.xml
<RecordType>
    <fullName>DeliveryDepartment</fullName>
    <active>true</active>
    <businessProcess>Standard Lead Process</businessProcess>
    <label>Delivery Department</label>
</RecordType>