force-app/main/default/objects/Lead/recordTypes/distributor.recordType-meta.xml
<RecordType>
    <fullName>distributor</fullName>
    <active>true</active>
    <businessProcess>Standard Lead Process</businessProcess>
    <description>유통사업자</description>
    <label>distributor</label>
</RecordType>