force-app/main/default/objects/Lead/recordTypes/EATLead.recordType-meta.xml
<RecordType>
    <fullName>EATLead</fullName>
    <active>true</active>
    <businessProcess>Standard Lead Process</businessProcess>
    <label>EAT Lead</label>
</RecordType>