force-app/main/default/objects/Lead/recordTypes/food_service_business.recordType-meta.xml
<RecordType>
    <fullName>food_service_business</fullName>
    <active>true</active>
    <businessProcess>Standard Lead Process</businessProcess>
    <description>외식사업자</description>
    <label>food service business</label>
</RecordType>