force-app/main/default/objects/Lead/recordTypes/FSDiscoveryDepartment.recordType-meta.xml
<RecordType>
    <fullName>FSDiscoveryDepartment</fullName>
    <active>true</active>
    <businessProcess>Standard Lead Process</businessProcess>
    <label>FS Discovery Department</label>
</RecordType>