force-app/main/default/objects/Lead/recordTypes/GroupMealSolutionDepartment.recordType-meta.xml
<RecordType>
    <fullName>GroupMealSolutionDepartment</fullName>
    <active>true</active>
    <businessProcess>Standard Lead Process</businessProcess>
    <label>Group Meal Solution Department</label>
</RecordType>