force-app/main/default/objects/Lead/recordTypes/HealthyNuriDepartment.recordType-meta.xml
<RecordType>
    <fullName>HealthyNuriDepartment</fullName>
    <active>true</active>
    <businessProcess>Standard Lead Process</businessProcess>
    <label>Healthy-nuri Department</label>
</RecordType>