force-app/main/default/objects/Lead/recordTypes/INuriDepartment.recordType-meta.xml
<RecordType>
    <fullName>INuriDepartment</fullName>
    <active>true</active>
    <businessProcess>Standard Lead Process</businessProcess>
    <label>I-nuri Department</label>
</RecordType>