force-app/main/default/objects/Lead/recordTypes/KindergartenLead.recordType-meta.xml
<RecordType>
    <fullName>KindergartenLead</fullName>
    <active>true</active>
    <businessProcess>Standard Lead Process</businessProcess>
    <description>어린이집정보공개포탈 사이트에서 생성 및 업데이트 되는 Lead</description>
    <label>Kindergarten Lead</label>
</RecordType>