force-app/main/default/objects/Lead/recordTypes/LeadLocalData.recordType-meta.xml
<RecordType>
    <fullName>LeadLocalData</fullName>
    <active>true</active>
    <businessProcess>Standard Lead Process</businessProcess>
    <label>Lead Local Data</label>
</RecordType>