force-app/main/default/objects/Lead/recordTypes/MilitaryLead.recordType-meta.xml
<RecordType>
    <fullName>MilitaryLead</fullName>
    <active>true</active>
    <businessProcess>Standard Lead Process</businessProcess>
    <description>국방조달 사이트에서 생성 및 업데이트 되는 Lead</description>
    <label>Military Lead</label>
</RecordType>