force-app/main/default/objects/Lead/recordTypes/NaraMarketLead.recordType-meta.xml
<RecordType>
    <fullName>NaraMarketLead</fullName>
    <active>true</active>
    <businessProcess>Standard Lead Process</businessProcess>
    <description>나라장터 사이트에서 생성 및 업데이트 되는 Lead</description>
    <label>Nara Market Lead</label>
</RecordType>