force-app/main/default/objects/Lead/recordTypes/RestaurantBusinessDepartment.recordType-meta.xml
<RecordType>
    <fullName>RestaurantBusinessDepartment</fullName>
    <active>true</active>
    <businessProcess>Standard Lead Process</businessProcess>
    <label>Restaurant Business Department</label>
</RecordType>