force-app/main/default/objects/Lead/recordTypes/StrategyDepartment.recordType-meta.xml
<RecordType>
    <fullName>StrategyDepartment</fullName>
    <active>true</active>
    <businessProcess>Standard Lead Process</businessProcess>
    <label>Strategy Department</label>
</RecordType>