force-app/main/default/objects/Lead/listViews/GroupMealSolutionSU_Lead.listView-meta.xml
<ListView>
    <fullName>GroupMealSolutionSU_Lead</fullName>
    <columns>fm_LinkBidNoticeName__c</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>BidNoticeNumber__c</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>BidNoticeStatus__c</columns>
    <columns>BidMethod__c</columns>
    <columns>pblancDate__c</columns>
    <columns>BidQualifyRegistCloseDateTime__c</columns>
    <columns>BidOpenDateTime__c</columns>
    <columns>FULL_NAME</columns>
    <columns>Keyword__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>급식솔루션사업부 입찰공고</label>
    <queue>GroupMealSolutionSU</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>